PROJECT(SUTUNGPO)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ADD_SUBDIRECTORY(src bin)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/ann_1.1.2/include)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON ) 
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")

find_package(PCL 1.8 REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS} ${PROJECT_SOURCE_DIR}/ann_1.1.2/lib)
add_definitions(${PCL_DEFINITIONS})

SET(SRC_LIST main.cpp)
#MESSAGE(STATUS "This is BINARY dir " ${SUTUNGPO_BINARY_DIR})
#MESSAGE(STATUS "This is SOURCE dir " ${SUTUNGPO_SOURCE_DIR})
ADD_EXECUTABLE(SuTungpo ${SRC_LIST})
target_link_libraries(SuTungpo ${PCL_LIBRARIES} sutungpo ANN)

#INSTALL(TARGETS myrun mylib mystaticlib
#		RUNTIME DESTINATION bin
#		LIBRARY DESTINATION lib
#		ARCHIVE DESTINATION libstatic)

# how to install
#cmake -DCMAKE_INSTALL_PREFIX=/usr 

